--- a/Python101_2025.ipynb
+++ b/Python101_2025.ipynb
@@ -880,7 +880,7 @@
         "id": "HpqdQ7_i63P-",
         "outputId": "81badbd7-f940-4038-9d6d-23c73f9e4529"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +904,7 @@
         "list_a = [1,\"a\",3.5,\"xyz\"]\n",
         "print(list_a)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -928,7 +928,7 @@
         "list_b = [1,5,'v']\n",
         "print(list_b)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -961,7 +961,7 @@
         "list_c = list() #functon ()\n",
         "print(list_c)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -994,7 +994,7 @@
       "source": [
         "list_b[2] #การindex []"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1033,7 +1033,7 @@
         "list_b.append('u')\n",
         "print(list_b)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,7 +1057,7 @@
       "source": [
         "list_b.pop() ### ดึงสมาชิกที่สุดท้ายออกจาก list"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1086,7 +1086,7 @@
       "source": [
         "list_b"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1108,7 +1108,7 @@
       "metadata": {
         "id": "lEdpZnSaaBGV"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1123,7 +1123,7 @@
         "id": "_QOyRIXi-XWQ",
         "outputId": "f93b9032-f2b6-41d0-e68c-4663bc173df4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,7 +1147,7 @@
         "id": "myYuGbLt_WNi",
         "outputId": "620c69bf-4531-496e-dacf-ffea84ada434"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1181,7 +1181,7 @@
         "t = 'python is easy'\n",
         "t"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1211,7 +1211,7 @@
         "id": "8TVdWEB5aw4Y",
         "outputId": "87e017e8-f151-475c-b2cc-79be08a21990"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1241,7 +1241,7 @@
         "id": "fz9lBsRK-23D",
         "outputId": "9e662ab3-aa2f-4ff1-fb9d-4eee99b90a53"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1270,7 +1270,7 @@
         "id": "XD3Sb0A1_M5m",
         "outputId": "fda1b067-faab-4722-bfd1-4d6e09f8e31a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1307,7 +1307,7 @@
       "source": [
         "len(list_b) # len คือคำสั่งตรวจสอบความยาวของ list (จำนวนสมาชิก)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1333,7 +1333,7 @@
       "source": [
         "len(t)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1360,7 +1360,7 @@
         "id": "t5tR_F0FBrWj",
         "outputId": "7e5a445c-262a-4bde-d905-0e25bde2de15"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1398,7 +1398,7 @@
       "source": [
         "t[0]"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1428,7 +1428,7 @@
       "source": [
         "t[-1]"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1458,7 +1458,7 @@
       "source": [
         "t[-23]"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1503,7 +1503,7 @@
       "source": [
         "t = 'python is easy'"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1519,7 +1519,7 @@
         "print(t)\n",
         "print(t[-11:17])"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1558,7 +1558,7 @@
         "print(t[-4:])\n",
         "print(t[:])"
       ],
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1585,7 +1585,7 @@
       "source": [
         "print(t[::2])  ## : ตัวที่สอง กำหนด step"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1608,7 +1608,7 @@
         "id": "RYDSwol1dK8V",
         "outputId": "c2983f10-6b7b-4770-da33-8d08c43cd410"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1643,7 +1643,7 @@
         "id": "H8Yda8fyJzAI",
         "outputId": "3bbfb020-5fbf-4e5e-a889-ebfc45166751"
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1666,7 +1666,7 @@
         "id": "b0iLdWuPMlfo",
         "outputId": "60a0689e-af08-472f-d047-6dbdcc485414"
       },
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1692,7 +1692,7 @@
         "id": "yLC9XM0ILB_J",
         "outputId": "11bbd101-036e-41e9-e521-b3e266dc0f66"
       },
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1715,7 +1715,7 @@
         "id": "E5USWCaqL8co",
         "outputId": "cb26f2d0-4a39-45b6-881b-f162fb01b8b9"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1747,7 +1747,7 @@
       "source": [
         "print(list(range(10)))"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1770,7 +1770,7 @@
         "id": "BNDUD3PNd6aU",
         "outputId": "76a3566a-1850-4174-bd95-2a9e483cc38d"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1803,7 +1803,7 @@
       "source": [
         " t + '??'"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,7 +1833,7 @@
       "source": [
         "t + list_b ## ไม่สามารถเอา list ปกติมาต่อกับ string ได้"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1856,7 +1856,7 @@
       "metadata": {
         "id": "GNGTvqxuQCnJ"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1872,7 +1872,7 @@
       "source": [
         "list_b + list_a"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1900,7 +1900,7 @@
         "id": "FyAgsnCsetMW",
         "outputId": "98b29c5d-aed9-448d-8cf1-91b73c15057b"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1930,7 +1930,7 @@
         "id": "yis8UVAKexBY",
         "outputId": "97307462-fb6d-4aaf-c623-cd25d571897e"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1960,7 +1960,7 @@
         "id": "aQLFjupVe1XP",
         "outputId": "bc4bd4a9-75e7-4b8e-aaaf-265424377e79"
       },
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1990,7 +1990,7 @@
         "id": "IyZHZEXOP82q",
         "outputId": "003eb5da-2edd-405d-ea67-d888fc46a0e5"
       },
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2125,7 +2125,7 @@
         "id": "q1_OXBkJfJ0l",
         "outputId": "83604db7-02aa-4e15-b56d-55369ebc54a6"
       },
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2154,7 +2154,7 @@
       "source": [
         "t.split(' ')"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2176,7 +2176,7 @@
       "source": [
         "time = '12:30:15'"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2191,7 +2191,7 @@
       "source": [
         "time.split(':')"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2223,7 +2223,7 @@
         "\n",
         "print(':'.join(t_sp))\n"
       ],
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2254,57 +2254,180 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data = \"12:30:15, Wednesday - 13:41:07, Thursday\"\n",
+        "start , end = data.split(' - ')\n",
+        "print(start)\n",
+        "print(end)\n",
+        "\n",
+        "start_time , start_day = start.split(\",\")\n",
+        "end_time, end_day = end.split(\",\")\n",
+        "\n",
+        "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+        "\n",
+        "start_index = days.index(start_day.strip())\n",
+        "end_index = days.index(end_day.strip())\n",
+        "\n",
+        "if end_index - start_index -1 < 0:\n",
+        "  day_diff = 7 + end_index - start_index -1\n",
+        "else:\n",
+        "  day_diff = end_index - start_index -1\n",
+        "print(f'ห่างกัน {day_diff} วัน')\n",
+        "\n",
+        "h1 , m1 , s1 = start_time.split(':')\n",
+        "h1 = int(h1)\n",
+        "m1 = int(m1)\n",
+        "s1 = int(s1)\n",
+        "start_second = (h1*3600) + (m1*60) + s1\n",
+        "\n",
+        "h2 , m2 , s2 = end_time.split(':')\n",
+        "h2 = int(h2)\n",
+        "m2 = int(m2)\n",
+        "s2 = int(s2)\n",
+        "end_second = (h2*3600) + (m2*60) + s2\n",
+        "\n",
+        "# 1 วัน มี 86400 วินาที\n",
+        "total_time = (86400 - start_second) + end_second + (day_diff * 86400)\n",
+        "print(f'ช่วงระหว่าง {data} เป็นระยะเวลาทั้งหมด {total_time} วินาที')"
+      ],
       "metadata": {
-        "id": "Tj-A7R2CgBpJ"
+        "id": "Tj-A7R2CgBpJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2deaa2e-7e31-4743-aafa-521b776d063e"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12:30:15, Wednesday\n",
+            "13:41:07, Thursday\n",
+            "ห่างกัน 0 วัน\n",
+            "ช่วงระหว่าง 12:30:15, Wednesday - 13:41:07, Thursday เป็นระยะเวลาทั้งหมด 90652 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data = \"12:53:15, Monday - 00:59:25, Tuesday\"\n",
+        "start , end = data.split(' - ')\n",
+        "print(start)\n",
+        "print(end)\n",
+        "\n",
+        "start_time , start_day = start.split(\",\")\n",
+        "end_time, end_day = end.split(\",\")\n",
+        "\n",
+        "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+        "\n",
+        "start_index = days.index(start_day.strip())\n",
+        "end_index = days.index(end_day.strip())\n",
+        "\n",
+        "if end_index - start_index -1 < 0:\n",
+        "  day_diff = 7 + end_index - start_index -1\n",
+        "else:\n",
+        "  day_diff = end_index - start_index -1\n",
+        "print(f'ห่างกัน {day_diff} วัน')\n",
+        "\n",
+        "h1 , m1 , s1 = start_time.split(':')\n",
+        "h1 = int(h1)\n",
+        "m1 = int(m1)\n",
+        "s1 = int(s1)\n",
+        "start_second = (h1*3600) + (m1*60) + s1\n",
+        "\n",
+        "h2 , m2 , s2 = end_time.split(':')\n",
+        "h2 = int(h2)\n",
+        "m2 = int(m2)\n",
+        "s2 = int(s2)\n",
+        "end_second = (h2*3600) + (m2*60) + s2\n",
+        "\n",
+        "# 1 วัน มี 86400 วินาที\n",
+        "total_time = (86400 - start_second) + end_second + (day_diff * 86400)\n",
+        "print(f'ช่วงระหว่าง {data} เป็นระยะเวลาทั้งหมด {total_time} วินาที')"
+      ],
       "metadata": {
-        "id": "uYDR2G8CgBmb"
+        "id": "uYDR2G8CgBmb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63ab1754-0aff-4258-dff8-fa3d74e74bcb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12:53:15, Monday\n",
+            "00:59:25, Tuesday\n",
+            "ห่างกัน 0 วัน\n",
+            "ช่วงระหว่าง 12:53:15, Monday - 00:59:25, Tuesday เป็นระยะเวลาทั้งหมด 43570 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data = \"16:06:09, Sunday - 11:11:11, Tuesday\"\n",
+        "start , end = data.split(' - ')\n",
+        "print(start)\n",
+        "print(end)\n",
+        "\n",
+        "start_time , start_day = start.split(\",\")\n",
+        "end_time, end_day = end.split(\",\")\n",
+        "\n",
+        "days = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+        "\n",
+        "start_index = days.index(start_day.strip())\n",
+        "end_index = days.index(end_day.strip())\n",
+        "\n",
+        "if end_index - start_index -1 < 0:\n",
+        "  day_diff = 7 + end_index - start_index -1\n",
+        "else:\n",
+        "  day_diff = end_index - start_index -1\n",
+        "print(f'ห่างกัน {day_diff} วัน')\n",
+        "\n",
+        "h1 , m1 , s1 = start_time.split(':')\n",
+        "h1 = int(h1)\n",
+        "m1 = int(m1)\n",
+        "s1 = int(s1)\n",
+        "start_second = (h1*3600) + (m1*60) + s1\n",
+        "\n",
+        "h2 , m2 , s2 = end_time.split(':')\n",
+        "h2 = int(h2)\n",
+        "m2 = int(m2)\n",
+        "s2 = int(s2)\n",
+        "end_second = (h2*3600) + (m2*60) + s2\n",
+        "\n",
+        "# 1 วัน มี 86400 วินาที\n",
+        "total_time = (86400 - start_second) + end_second + (day_diff * 86400)\n",
+        "print(f'ช่วงระหว่าง {data} เป็นระยะเวลาทั้งหมด {total_time} วินาที')"
+      ],
       "metadata": {
-        "id": "5PO2iMjhgBi6"
+        "id": "5PO2iMjhgBi6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2a861a39-3e0b-49bc-838f-26b7069ceeef"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "iao0oTWxgBgD"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "8Tw9g25RgBct"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "vRp6wKsrgBZE"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "16:06:09, Sunday\n",
+            "11:11:11, Tuesday\n",
+            "ห่างกัน 1 วัน\n",
+            "ช่วงระหว่าง 16:06:09, Sunday - 11:11:11, Tuesday เป็นระยะเวลาทั้งหมด 155102 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
