--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -1029,6 +1029,191 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Quiz 6\n",
+        "\n",
+        "เขียน function ของ HW2 มีการใช้ค่า default ของ input โดยถ้าวันที่กรอกเป็นวันเดียวกันให้ไม่ต้องกรอกเลยหรือกรอกแค่ 1 ตัว"
+      ],
+      "metadata": {
+        "id": "X8JrOTt_fqsA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_time_diff_with_days(start_str, end_str=None):\n",
+        "    \"\"\"\n",
+        "    คำนวณจำนวนวินาทีและจำนวนวันระหว่างวันเวลาเริ่มต้นและสิ้นสุด\n",
+        "    โดยมีค่า default สำหรับ end_str และรองรับการกรอกอินพุตเพียงตัวเดียว\n",
+        "    ในกรณีที่เป็นวันเดียวกัน หรือต้องการคำนวณถึงเวลาปัจจุบัน\n",
+        "\n",
+        "    Args:\n",
+        "        start_str (str): สตริงวันเวลาเริ่มต้นในรูปแบบ \"HH:MM:SS, DayOfWeek\"\n",
+        "                         หรือ \"HH:MM:SS\" (ถ้าเป็นเวลาในวันเดียวกัน)\n",
+        "        end_str (str, optional): สตริงวันเวลาสิ้นสุดในรูปแบบ \"HH:MM:SS, DayOfWeek\"\n",
+        "                                  หรือ \"HH:MM:SS\" (ถ้าเป็นเวลาในวันเดียวกัน)\n",
+        "                                  หากไม่ระบุ (None) จะคำนวณจาก start_str ถึงเวลาปัจจุบัน\n",
+        "\n",
+        "    Returns:\n",
+        "        tuple: (จำนวนวินาทีทั้งหมด, จำนวนวันทั้งหมด) หรือ None หากเกิดข้อผิดพลาด\n",
+        "    \"\"\"\n",
+        "    sec_in_day = 24 * 3600 # วินาทีใน 1 วัน\n",
+        "\n",
+        "    def get_day_number(day_name_input):\n",
+        "        # แปลงชื่อวันในสัปดาห์เป็นตัวเลข (0=Monday, 6=Sunday)\n",
+        "        if day_name_input == \"Monday\": return 0\n",
+        "        elif day_name_input == \"Tuesday\": return 1\n",
+        "        elif day_name_input == \"Wednesday\": return 2\n",
+        "        elif day_name_input == \"Thursday\": return 3\n",
+        "        elif day_name_input == \"Friday\": return 4\n",
+        "        elif day_name_input == \"Saturday\": return 5\n",
+        "        elif day_name_input == \"Sunday\": return 6\n",
+        "        else: return -1 # ค่าผิดพลาด\n",
+        "\n",
+        "    def parse_time_to_total_seconds(time_day_string, current_day_num=None):\n",
+        "        # ตรวจสอบว่าอินพุตมีวันในสัปดาห์ระบุมาด้วยหรือไม่\n",
+        "        if ', ' in time_day_string:\n",
+        "            parts = time_day_string.split(', ')\n",
+        "            time_part = parts[0]\n",
+        "            day_part = parts[1]\n",
+        "            day_num = get_day_number(day_part)\n",
+        "            if day_num == -1:\n",
+        "                raise ValueError(f\"ชื่อวันไม่ถูกต้อง: {day_part}\")\n",
+        "        else:\n",
+        "            # ถ้าไม่มีวันในสัปดาห์ระบุมา ให้ใช้ day_num ที่ส่งมา (จากเวลาปัจจุบัน)\n",
+        "            # หรือถือว่าเป็นวันเดียวกันกับ start_str\n",
+        "            time_part = time_day_string\n",
+        "            if current_day_num is None:\n",
+        "                # กรณีที่ไม่ระบุวันเลย (ต้องเป็นเวลาในวันเดียวกัน)\n",
+        "                day_num = 0 # ใช้ 0 ชั่วคราวเพื่อคำนวณแค่เวลาในวันนั้น\n",
+        "            else:\n",
+        "                day_num = current_day_num\n",
+        "\n",
+        "        # แยกชั่วโมง นาที วินาที (ไม่ใช้ map)\n",
+        "        first_colon_idx = -1\n",
+        "        second_colon_idx = -1\n",
+        "        for i, char in enumerate(time_part):\n",
+        "            if char == ':':\n",
+        "                if first_colon_idx == -1:\n",
+        "                    first_colon_idx = i\n",
+        "                else:\n",
+        "                    second_colon_idx = i\n",
+        "                    break\n",
+        "\n",
+        "        h_str = time_part[0:first_colon_idx]\n",
+        "        m_str = time_part[first_colon_idx+1:second_colon_idx]\n",
+        "        s_str = time_part[second_colon_idx+1:]\n",
+        "\n",
+        "        h = int(h_str)\n",
+        "        m = int(m_str)\n",
+        "        s = int(s_str)\n",
+        "\n",
+        "        return day_num * sec_in_day + h * 3600 + m * 60 + s\n",
+        "\n",
+        "    try:\n",
+        "        if end_str is None:\n",
+        "            # กรณี end_str เป็น None: คำนวณจาก start_str ไปยังเวลาปัจจุบัน\n",
+        "            # จำเป็นต้อง import datetime เพื่อดึงเวลาและวันปัจจุบัน\n",
+        "            from datetime import datetime\n",
+        "            now = datetime.now()\n",
+        "            current_day_name = now.strftime(\"%A\")\n",
+        "            current_day_num = get_day_number(current_day_name)\n",
+        "            current_time_str = now.strftime(\"%H:%M:%S\")\n",
+        "\n",
+        "            start_total_seconds = parse_time_to_total_seconds(start_str)\n",
+        "            end_total_seconds = parse_time_to_total_seconds(current_time_str, current_day_num)\n",
+        "\n",
+        "            start_day_part_only = start_str.split(', ')[1] if ', ' in start_str else None\n",
+        "\n",
+        "            if start_day_part_only is None:\n",
+        "                # ถ้า start_str ไม่ได้ระบุวันมา ถือว่าอยู่คนละวันกับปัจจุบันได้\n",
+        "                # จะจัดการในบรรทัดถัดไป\n",
+        "                pass\n",
+        "            elif current_day_num < get_day_number(start_day_part_only):\n",
+        "                # ถ้าวันปัจจุบันย้อนกลับจากวันเริ่มต้น (ในรอบสัปดาห์)\n",
+        "                end_total_seconds += 7 * sec_in_day\n",
+        "\n",
+        "            total_seconds = end_total_seconds - start_total_seconds\n",
+        "            total_days = total_seconds // sec_in_day # จำนวนวันเต็ม\n",
+        "            return (total_seconds, total_days)\n",
+        "\n",
+        "        # กรณี end_str ไม่เป็น None\n",
+        "        start_day_given = ', ' in start_str\n",
+        "        end_day_given = ', ' in end_str\n",
+        "\n",
+        "        if start_day_given and end_day_given:\n",
+        "            # กรณีปกติ: มีวันในสัปดาห์ระบุมาทั้งคู่\n",
+        "            start_total_seconds = parse_time_to_total_seconds(start_str)\n",
+        "            end_total_seconds = parse_time_to_total_seconds(end_str)\n",
+        "\n",
+        "            if end_total_seconds < start_total_seconds:\n",
+        "                end_total_seconds += 7 * sec_in_day # ข้ามสัปดาห์\n",
+        "\n",
+        "            total_seconds = end_total_seconds - start_total_seconds\n",
+        "            total_days = total_seconds // sec_in_day\n",
+        "            return (total_seconds, total_days)\n",
+        "\n",
+        "        elif not start_day_given and not end_day_given:\n",
+        "            # กรณี: ไม่ระบุวันเลยทั้งคู่ (ถือว่าเป็นเวลาในวันเดียวกันและข้ามวันได้)\n",
+        "            start_total_seconds = parse_time_to_total_seconds(start_str, current_day_num=0)\n",
+        "            end_total_seconds = parse_time_to_total_seconds(end_str, current_day_num=0)\n",
+        "\n",
+        "            if end_total_seconds < start_total_seconds:\n",
+        "                end_total_seconds += sec_in_day # ข้ามวัน\n",
+        "\n",
+        "            total_seconds = end_total_seconds - start_total_seconds\n",
+        "            total_days = total_seconds // sec_in_day\n",
+        "            return (total_seconds, total_days)\n",
+        "\n",
+        "        else:\n",
+        "            # กรณีผสม: มีอันใดอันหนึ่งระบุวันมา แต่อีกอันไม่ (คลุมเครือ)\n",
+        "            print(\"ข้อผิดพลาด: รูปแบบอินพุตไม่สอดคล้องกัน (ต้องระบุวันทั้งคู่ หรือไม่ระบุเลยทั้งคู่)\")\n",
+        "            return None\n",
+        "\n",
+        "    except (ValueError, IndexError) as e:\n",
+        "        print(f\"เกิดข้อผิดพลาดในการประมวลผลข้อมูล: {e}\")\n",
+        "        return None"
+      ],
+      "metadata": {
+        "id": "W4u8Ip1LgF52"
+      },
+      "execution_count": 57,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result1 = get_time_diff_with_days(\"12:30:15, Wednesday\", \"13:41:07, Thursday\")\n",
+        "print(f\"12:30:15, Wednesday - 13:41:07, Thursday: วินาที={result1[0]}, วัน={result1[1]}\") # Output: วินาที=90652, วัน=1\n",
+        "\n",
+        "result2 = get_time_diff_with_days(\"16:06:09, Sunday\", \"11:11:11, Tuesday\")\n",
+        "print(f\"16:06:09, Sunday - 11:11:11, Tuesday: วินาที={result2[0]}, วัน={result2[1]}\") # Output: วินาที=140702, วัน=1\n",
+        "\n",
+        "result3 = get_time_diff_with_days(\"12:53:15, Monday\", \"00:59:25, Tuesday\")\n",
+        "print(f\"12:53:15, Monday - 00:59:25, Tuesday: วินาที={result3[0]}, วัน={result3[1]}\") # Output: วินาที=43570, วัน=0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fzt2NI81gqhw",
+        "outputId": "e24ecc79-2e3d-4593-d070-736b724ac3be"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12:30:15, Wednesday - 13:41:07, Thursday: วินาที=90652, วัน=1\n",
+            "16:06:09, Sunday - 11:11:11, Tuesday: วินาที=155102, วัน=1\n",
+            "12:53:15, Monday - 00:59:25, Tuesday: วินาที=43570, วัน=0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Quiz3.5\n",
         "\n",
         "รับ input 2 ตัว โดยตั้งค่า default time1 เป็น 00:00:00"
