--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -21,6 +21,7 @@
     },
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -1244,6 +1245,72 @@
       "metadata": {
         "id": "Y60TMz5ijb_S"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## inspect existing function\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "u7_b5UyUj841"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- https://www.w3schools.com/python/ref_func_print.asp\n",
+        "- https://scikit-learn.org/stable/modules/generated/sklearn.tree.DecisionTreeClassifier.html#sklearn.tree.DecisionTreeClassifier"
+      ],
+      "metadata": {
+        "id": "5Lzmg4CMkRwT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abc','def')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T3zJRtlKk22C",
+        "outputId": "703f4f6c-37ac-45e3-edc9-01bd913d4251"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abc def\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('abc','def', sep ='+')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SYYWeBUMk-HA",
+        "outputId": "c854911e-df07-4139-8820-7426b621d0dc"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "abc+def\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
